fixing horizontal scroll

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,9 +5,10 @@
 
 .card__content {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   margin-top: 12px;
+  width: 415px;
 }
 .card__image {
   width: 100%;
@@ -27,7 +28,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 100%;
+  max-width: 288px;
+
 }
 
 .card__like-button {
@@ -44,7 +46,7 @@
   opacity: 1;
 }
 
-@media screen and (max-width: 706px) {
+@media screen and (max-width: 727px) {
   .card {
     margin: 0 auto;
     max-width: 100vw;
@@ -52,6 +54,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .card__content{
+    width: 285px;
   }
 
   .card__image {
