--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -13,3 +13,13 @@
   justify-content: center;
   gap: 20px;
 }
+
+.cards__list li:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 727px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+  }
+}
